hook button icon colors

--- a/sections/section-header.liquid
+++ b/sections/section-header.liquid
@@ -10,6 +10,10 @@
   color: {{ block.settings.button_text_color }}
 }
 
+.section-header-button svg{
+  fill: {{ block.settings.button_text_color }}
+}
+
 .section-header-button:hover {
   /* Adjust for a hover effect, for example, darken the button slightly */
   background-color: darken({{ block.settings.button.button_color }}, 10%);
@@ -699,7 +703,7 @@
         },
         {
             "type": "color",
-            "label": "Button Color",
+            "label": "Button Background Color",
             "id": "button_color",
             "default": "#0F62FE"
         },
